--- a/.github/workflows/cycle-quote.yml
+++ b/.github/workflows/cycle-quote.yml
@@ -1,5 +1,4 @@
 name: Update Newfies Quote
-
 on:
   schedule:
     - cron: '0 */4 * * *'
@@ -20,6 +19,11 @@ jobs:
       with:
         python-version: '3.x'
 
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests
+
     - name: Run script
       run: |
         python workflow_scripts/quote/generate.py
@@ -28,6 +32,6 @@ jobs:
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
-        git add README.md
+        git add README.md quote.png
         git commit -m "New Newfies Quote" || echo "No changes to commit"
         git push
