--- a/.github/workflows/cycle-quote.yml
+++ b/.github/workflows/cycle-quote.yml
@@ -32,6 +32,6 @@ jobs:
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
-        git add README.md quote.png
+        git add README.md res/quote.png
         git commit -m "New Newfies Quote" || echo "No changes to commit"
         git push
